# matrix-wordle

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  state.py  wordle.py
resources/: wordle_key.csv
