[tool.poetry]
name = "matrix-wordle"
version = "0.1.0"
description = "An implementation of the popular Wordle game for the Matrix Protocol."
authors = ["KrazyKirby99999 <krazykirby99999@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
simplematrixbotlib = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
